feat(frontend): introduce concrete rust adapter

--- a/.github/workflows/concrete_compiler_test_cpu.yml
+++ b/.github/workflows/concrete_compiler_test_cpu.yml
@@ -119,8 +119,6 @@ jobs:
             rm -rf /build/*
             ccache -z
             ccache -p
-            cargo install cxxbridge-cmd
-            dnf -y install libatomic
             make DATAFLOW_EXECUTION_ENABLED=ON Python3_EXECUTABLE=$PYTHON_EXEC BUILD_DIR=/build all
       - name: Ccache stats
         if: always()
@@ -176,7 +174,7 @@ jobs:
             set -e
             cd /concrete/compilers/concrete-compiler/compiler
             mkdir -p /tmp/concrete_compiler/gpu_tests/
-            pip install pytest
+            pip install pytest jsonpickle
             sed "s/pytest/python -m pytest/g" -i Makefile
             make MINIMAL_TESTS=${{ env.MINIMAL_TESTS }} DATAFLOW_EXECUTION_ENABLED=ON Python3_EXECUTABLE=$PYTHON_EXEC BUILD_DIR=/build run-tests
       - name: Slack Notification
