--- a/.github/workflows/concrete_compiler_test_macos_cpu.yml
+++ b/.github/workflows/concrete_compiler_test_macos_cpu.yml
@@ -61,6 +61,7 @@ jobs:
           echo "Debug: ccache statistics (prior to the build):"
           ccache -s
           cargo install cxxbridge-cmd
+          rm -rf build/*
           make Python3_EXECUTABLE="${PYTHON_EXEC}" all
           echo "Debug: ccache statistics (after the build):"
           ccache -s
