chore(ci): fix container push on main

--- a/.github/workflows/concrete_compiler_publish_docker_images.yml
+++ b/.github/workflows/concrete_compiler_publish_docker_images.yml
@@ -164,6 +164,7 @@ jobs:
             compilers/**
             third_party/**
             tools/**
+            docker/**
       - name: Login to Registry
         id: login
         if: steps.changed-files.outputs.any_changed == 'true'
