--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -13,6 +13,10 @@ on:
   schedule:
     - cron: '44 9 * * 5' # Runs every Friday at 9:44 AM
 
+concurrency:
+  group: codeql_${{ github.ref }}
+  cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
+
 jobs:
   setup-instance:
     runs-on: ubuntu-latest
