fix(ci): limit number of process for pytest in the release

--- a/.github/workflows/concrete_python_release.yml
+++ b/.github/workflows/concrete_python_release.yml
@@ -17,6 +17,7 @@ env:
   SLACK_USERNAME: ${{ secrets.BOT_USERNAME }}
   SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
   RELEASE_TYPE: ${{ (github.event_name == 'push' && contains(github.ref, 'refs/tags/')) && 'public' || 'nightly' }}
+  PYTEST_MAXPROCESSES: "100"
 
 concurrency:
   group: concrete_python_release_${{ github.ref }}
@@ -452,7 +453,7 @@ jobs:
 
           # Running tests
           make tfhers-utils
-          pytest tests -svv -n auto
+          pytest tests -svv -n auto --maxprocesses="${PYTEST_MAXPROCESSES}"
       - name: Slack Notification
         if: ${{ failure() }}
         continue-on-error: true
@@ -638,7 +639,7 @@ jobs:
           # Running tests
           make tfhers-utils
           mkdir ./KeySetCache
-          pytest tests -svv -n auto --key-cache "./KeySetCache" -m "not dataflow and not graphviz"
+          pytest tests -svv -n auto --maxprocesses="${PYTEST_MAXPROCESSES}" --key-cache "./KeySetCache" -m "not dataflow and not graphviz"
       - name: Cleanup host
         if: success() || failure()
         run: |
