--- a/frontends/concrete-rust/concrete-keygen/Cargo.toml
+++ b/frontends/concrete-rust/concrete-keygen/Cargo.toml
@@ -24,10 +24,14 @@ capnp = "0.20.3"
 clap = { version = "4.5.16", features = ["derive"] }
 
 wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }
+wasm-bindgen-futures = { version = "0.4.50", optional = true }
+web-sys = { version = "0.3.77", features = ["std", "MessagePort"], optional = true }
+serde-json = { package = "serde_json", version = "1.0", optional = true }
 
-tfhe = { version = "1.0" }
+tfhe = { version = "1.1" }
 tfhe-csprng = { version = "0.5" }
 
 [features]
 
-wasm = ["dep:wasm-bindgen", "tfhe/__wasm_api"]
+default = []
+wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys", "dep:serde-json", "tfhe/__wasm_api"]
