--- a/ci/slab.toml
+++ b/ci/slab.toml
@@ -5,8 +5,8 @@ instance_type = "m7i.16xlarge"
 security_group = ["sg-0e55cc31dfda0d8a7", ]
 
 [backend.aws.cpu-bench]
-region = "eu-west-1"
-image_id = "ami-002bdcd64b8472cf9"
+region = "eu-west-3"
+image_id = "ami-0d87d688748d653f7" # Based on Ubuntu 24.04
 instance_type = "hpc7a.96xlarge"
 
 [backend.aws.gpu-test]
