fix(common): fix llvm symbol clash with torch dyn lib

--- a/compilers/concrete-compiler/compiler/lib/Runtime/CMakeLists.txt
+++ b/compilers/concrete-compiler/compiler/lib/Runtime/CMakeLists.txt
@@ -3,6 +3,7 @@ add_compile_options(-fsized-deallocation)
 if(CONCRETELANG_CUDA_SUPPORT)
   add_library(
     ConcretelangRuntime SHARED
+    utils.cpp
     context.cpp
     simulation.cpp
     wrappers.cpp
@@ -13,6 +14,7 @@ if(CONCRETELANG_CUDA_SUPPORT)
 else()
   add_library(
     ConcretelangRuntime SHARED
+    utils.cpp
     context.cpp
     simulation.cpp
     wrappers.cpp
