--- a/.github/workflows/concrete_python_release.yml
+++ b/.github/workflows/concrete_python_release.yml
@@ -62,7 +62,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.10"]
-        hw: ["cpu", "gpu"]
+        hw: ["cpu"]
     needs: setup-instance
     runs-on: ${{ needs.setup-instance.outputs.runner-name }}
     steps:
@@ -413,7 +413,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        hw: ["cpu", "gpu"]
+        hw: ["cpu"]
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
