--- a/.github/workflows/concrete_python_release.yml
+++ b/.github/workflows/concrete_python_release.yml
@@ -62,7 +62,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.10"]
-        hw: ["cpu"]
+        hw: ["cpu", "gpu"]
     needs: setup-instance
     runs-on: ${{ needs.setup-instance.outputs.runner-name }}
     steps:
@@ -195,7 +195,7 @@ jobs:
         uses: actions/upload-artifact@b4b15b8c7c6ac21ea08fcf65892d2ee8f75cf882 # v4.4.3
         with:
           name: ${{ format('{0}-binaries-linux-x86', matrix.hw) }}
-          path: compilers/concrete-compiler/compiler/build/lib/libConcrete*.so
+          path: ${{ github.workspace }}/build/lib/libConcrete*.so
           retention-days: 3
       - name: Slack Notification
         if: ${{ failure() }}
@@ -403,7 +403,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        hw: ["cpu"]
+        hw: ["cpu", "gpu"]
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
