--- a/compilers/concrete-compiler/compiler/lib/Support/CMakeLists.txt
+++ b/compilers/concrete-compiler/compiler/lib/Support/CMakeLists.txt
@@ -33,6 +33,7 @@ add_mlir_library(
   ConcretelangConcreteTransforms
   ConcretelangSDFGTransforms
   ConcretelangSDFGInterfaces
+  ConcretelangRuntime
   LinalgExtras
   TFHEDialectTransforms
   rust_deps_bundle
