--- a/docker/Dockerfile.concrete-compiler-env
+++ b/docker/Dockerfile.concrete-compiler-env
@@ -11,8 +11,8 @@ RUN dnf install -y gcc-toolset-11 && dnf clean all
 RUN dnf install -y libatomic openssl openssl-devel && dnf clean all
 ENV CC_COMPILER=/opt/rh/gcc-toolset-11/root/usr/bin/gcc
 ENV CXX_COMPILER=/opt/rh/gcc-toolset-11/root/usr/bin/c++
-ENV PATH "/opt/rh/gcc-toolset-11/root/usr/bin:$PATH"
-ENV LD_LIBRARY_PATH "/opt/rh/gcc-toolset-11/root/usr/lib64:/opt/rh/gcc-toolset-11/root/usr/lib:/opt/rh/gcc-toolset-11/root/usr/lib64/dyninst:/opt/rh/gcc-toolset-11/root/usr/lib/dyninst:$LD_LIBRARY_PATH"
+ENV PATH="/opt/rh/gcc-toolset-11/root/usr/bin:$PATH"
+ENV LD_LIBRARY_PATH="/opt/rh/gcc-toolset-11/root/usr/lib64:/opt/rh/gcc-toolset-11/root/usr/lib:/opt/rh/gcc-toolset-11/root/usr/lib64/dyninst:/opt/rh/gcc-toolset-11/root/usr/lib/dyninst:$LD_LIBRARY_PATH"
 # setup ccache with an unlimited amount of files and storage
 RUN ccache -M 0 && ccache -F 0
 # Install Rust
@@ -34,23 +34,21 @@ RUN mkdir /capnproto && \
     make -j6 check && \
     make install && \
     rm -rf /capnproto
-# Add a non-root user and group
-RUN groupadd -g 10001 grp02 && \
-    useradd -u 10000 -g grp02 usr01 && \
-    mkdir -p /home/usr01 && chown -R usr01:grp02 /home/usr01 /boost_1_71_0 /workdir /build
-# Switch to the non-root user
-USER usr01:grp02
 # Install boost
-ADD https://boostorg.jfrog.io/artifactory/main/release/1.71.0/source/boost_1_71_0.tar.gz /boost_1_71_0.tar.gz
-RUN tar -xzvf /boost_1_71_0.tar.gz
-WORKDIR /boost_1_71_0
-RUN ./bootstrap.sh && ./b2 --with-filesystem install
+# hadolint ignore=DL3003
+RUN mkdir /boost/ && \
+    cd /boost && \
+    curl -O https://archives.boost.io/release/1.71.0/source/boost_1_71_0.tar.gz && \
+    tar -xzvf /boost/boost_1_71_0.tar.gz && \
+    cd /boost/boost_1_71_0 && \
+    ./bootstrap.sh && ./b2 --with-filesystem install && \
+    rm -rf /boost
 # Setup HPX
 COPY --from=ghcr.io/zama-ai/hpx:latest /hpx /hpx
 ENV HPX_INSTALL_DIR=/hpx/build
 # Setup CUDA
 COPY --from=ghcr.io/zama-ai/cuda:11-8 /usr/local/cuda-11.8/ /usr/local/cuda-11.8/
-ENV PATH "$PATH:/usr/local/cuda-11.8/bin"
+ENV PATH="$PATH:/usr/local/cuda-11.8/bin"
 # Set the python path. Options: [cp37-cp37m, cp38-cp38, cp39-cp39, cp310-cp310]
 # Links and env would be available to use the appropriate python version
 ARG python_tag=cp38-cp38
@@ -61,13 +59,13 @@ ENV PYTHON_EXEC=/opt/python/${python_tag}/bin/python
 RUN pip install --no-cache-dir numpy pybind11==2.8 PyYAML pytest wheel auditwheel mypy
 # Setup and build compiler
 COPY / /workdir
+WORKDIR /build
 WORKDIR /workdir/compilers/concrete-compiler/compiler
-ENV CCACHE_DEBUG 1
-ENV CCACHE_SLOPPINESS "include_file_ctime,include_file_mtime,time_macros"
-RUN mkdir -p /build && \
-    make DATAFLOW_EXECUTION_ENABLED=ON BUILD_DIR=/build CCACHE=ON \
+ENV CCACHE_DEBUG=1
+ENV CCACHE_SLOPPINESS="include_file_ctime,include_file_mtime,time_macros"
+RUN make DATAFLOW_EXECUTION_ENABLED=ON BUILD_DIR=/build CCACHE=ON \
     Python3_EXECUTABLE=${PYTHON_EXEC} \
     concretecompiler python-bindings
-ENV PYTHONPATH "$PYTHONPATH:/build/tools/concretelang/python_packages/concretelang_core"
-ENV PATH "$PATH:/build/bin"
+ENV PYTHONPATH="/build/tools/concretelang/python_packages/concretelang_core"
+ENV PATH="$PATH:/build/bin"
 RUN ccache -z
