--- a/docker/Dockerfile.hpx-env
+++ b/docker/Dockerfile.hpx-env
@@ -1,25 +1,23 @@
-FROM quay.io/pypa/manylinux_2_28_x86_64:2024-02-08-a1b4ddc as build
+FROM quay.io/pypa/manylinux_2_28_x86_64:2024-02-08-a1b4ddc AS build
 
 RUN dnf update -y && dnf install -y ninja-build hwloc-devel && dnf clean all
 # Setup gcc 11 (to be compatible with concrete-compiler image)
 RUN dnf install -y gcc-toolset-11 && dnf clean all
 ENV CC_COMPILER=/opt/rh/gcc-toolset-11/root/usr/bin/gcc
 ENV CXX_COMPILER=/opt/rh/gcc-toolset-11/root/usr/bin/c++
-# Add a non-root user and group
-RUN groupadd -g 10001 grp02 && \
-    useradd -u 10000 -g grp02 usr01 && \
-    chown -R usr01:grp02 /boost_1_71_0 /hpx
-# Switch to the non-root user
-USER usr01:grp02
 # Install boost
-ADD https://boostorg.jfrog.io/artifactory/main/release/1.71.0/source/boost_1_71_0.tar.gz /boost_1_71_0.tar.gz
-RUN tar -xzvf /boost_1_71_0.tar.gz
-WORKDIR /boost_1_71_0
-RUN ./bootstrap.sh && ./b2 --with-filesystem install
+# hadolint ignore=DL3003
+RUN mkdir /boost/ && \
+	cd /boost && \
+	curl -O https://archives.boost.io/release/1.71.0/source/boost_1_71_0.tar.gz && \
+	tar -xzvf /boost/boost_1_71_0.tar.gz && \
+	cd /boost/boost_1_71_0 && \
+	./bootstrap.sh && ./b2 --with-filesystem install && \
+	rm -rf /boost
 # Build HPX
-RUN git clone https://github.com/STEllAR-GROUP/hpx.git /hpx
 WORKDIR /hpx
-RUN git checkout v1.9.1
+RUN git clone https://github.com/STEllAR-GROUP/hpx.git /hpx && \
+	git checkout v1.9.1
 # empty HPX_WITH_MAX_CPU_COUNT = dynamic
 # ref https://github.com/STEllAR-GROUP/hpx/blob/1.7.1/CMakeLists.txt#L759
 WORKDIR /hpx/build
