--- a/compilers/concrete-compiler/compiler/lib/Bindings/Rust/CMakeLists.txt
+++ b/compilers/concrete-compiler/compiler/lib/Bindings/Rust/CMakeLists.txt
@@ -1,14 +1,12 @@
 add_compile_options(-fexceptions)
 
 add_custom_command(
-  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/concrete/src/ffi.rs ${CMAKE_CURRENT_SOURCE_DIR}/concrete/src/ffi.h
-  OUTPUT concrete/src/ffi.rs.cc ${CMAKE_CURRENT_SOURCE_DIR}/concrete/src/cxx.h
-  COMMAND cxxbridge ${CMAKE_CURRENT_SOURCE_DIR}/concrete/src/ffi.rs > concrete/src/ffi.rs.cc
-  COMMAND cxxbridge --header > ${CMAKE_CURRENT_SOURCE_DIR}/concrete/src/cxx.h)
+  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/ffi.rs ${CMAKE_CURRENT_SOURCE_DIR}/ffi.h
+  OUTPUT ffi.rs.cc ${CMAKE_CURRENT_SOURCE_DIR}/cxx.h
+  COMMAND cxxbridge ${CMAKE_CURRENT_SOURCE_DIR}/ffi.rs > ffi.rs.cc
+  COMMAND cxxbridge --header > ${CMAKE_CURRENT_SOURCE_DIR}/cxx.h)
 
-add_library(ConcreteRust SHARED concrete/src/ffi.h concrete/src/ffi.rs.cc)
-
-target_include_directories(ConcreteRust PRIVATE concrete/src)
+add_library(ConcreteRust SHARED ffi.rs.cc)
 
 if(LINUX)
   set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,-Bsymbolic")
@@ -17,14 +15,9 @@ endif()
 target_link_libraries(
   ConcreteRust
   PRIVATE ConcretelangSupport
-          ConcretelangCommon
           ConcretelangClientLib
           ConcretelangServerLib
-          ConcretelangRuntimeStatic
-          LLVMSupport
-          capnp
-          capnp-json
-          kj)
+          ConcretelangRuntimeStatic)
 
 if(APPLE)
   find_library(SECURITY_FRAMEWORK Security)
