--- a/frontends/concrete-rust/Makefile
+++ b/frontends/concrete-rust/Makefile
@@ -1,7 +1,8 @@
-build:
-	cargo build --release
+CARGO_SUBDIRS := concrete concrete-macro test concrete-keygen
 
-# install wasm-pack first: cargo install wasm-pack
-wasm-build:
-	wasm-pack build --target nodejs . --features="wasm"
-
+.PHONY: test
+test:
+	@for dir in $(CARGO_SUBDIRS); do \
+	   echo "Running cargo test in $$dir..."; \
+	   COMPILER_BUILD_DIRECTORY=../../../compilers/concrete-compiler/compiler/build cargo test --manifest-path $$dir/Cargo.toml || exit 1; \
+	done
