chore(ci): fix ci

--- a/.github/workflows/concrete_compiler_test_cpu.yml
+++ b/.github/workflows/concrete_compiler_test_cpu.yml
@@ -119,6 +119,8 @@ jobs:
             rm -rf /build/*
             ccache -z
             ccache -p
+            cargo install cxxbridge-cmd
+            dnf -y install libatomic openssl openssl-devel
             make DATAFLOW_EXECUTION_ENABLED=ON Python3_EXECUTABLE=$PYTHON_EXEC BUILD_DIR=/build all
       - name: Ccache stats
         if: always()
@@ -175,6 +177,7 @@ jobs:
             cd /concrete/compilers/concrete-compiler/compiler
             mkdir -p /tmp/concrete_compiler/gpu_tests/
             pip install pytest jsonpickle
+            dnf -y install libatomic openssl openssl-devel
             sed "s/pytest/python -m pytest/g" -i Makefile
             make MINIMAL_TESTS=${{ env.MINIMAL_TESTS }} DATAFLOW_EXECUTION_ENABLED=ON Python3_EXECUTABLE=$PYTHON_EXEC BUILD_DIR=/build run-tests
       - name: Slack Notification
