--- a/.github/workflows/concrete_compiler_test_gpu.yml
+++ b/.github/workflows/concrete_compiler_test_gpu.yml
@@ -74,6 +74,7 @@ jobs:
             rm -rf /build/*
             ccache -z
             ccache -p
+            cargo install cxxbridge-cmd
             mkdir -p /tmp/concrete_compiler/gpu_tests/
             make BINDINGS_PYTHON_ENABLED=OFF Python3_EXECUTABLE=$PYTHON_EXEC CUDA_SUPPORT=ON CUDA_PATH=${{ env.CUDA_PATH }} run-end-to-end-tests-gpu
       - name: Ccache stats
