--- a/compilers/concrete-compiler/compiler/lib/Bindings/Rust/CMakeLists.txt
+++ b/compilers/concrete-compiler/compiler/lib/Bindings/Rust/CMakeLists.txt
@@ -12,12 +12,8 @@ if(LINUX)
   set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,-Bsymbolic")
 endif()
 
-target_link_libraries(
-  ConcreteRust
-  PRIVATE ConcretelangSupport
-          ConcretelangClientLib
-          ConcretelangServerLib
-          ConcretelangRuntimeStatic)
+target_link_libraries(ConcreteRust PRIVATE ConcretelangSupport ConcretelangClientLib ConcretelangServerLib
+                                           ConcretelangRuntimeStatic)
 
 if(APPLE)
   find_library(SECURITY_FRAMEWORK Security)
